# Trading-Application

./: .gitignore  CMakeLists.txt  README.md
src/: AuthManager.cpp  AuthManager.h  DataProcessor.cpp  DataProcessor.h  DatabaseManager.cpp  DatabaseManager.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MarketData.h  MarketWatchWidget.cpp  MarketWatchWidget.h  NetworkClient.cpp  NetworkClient.h  OrderPanel.cpp  OrderPanel.h  PortfolioManager.cpp  PortfolioManager.h  PortfolioWidget.cpp  PortfolioWidget.h  TechnicalIndicators.cpp  TechnicalIndicators.h  main.cpp
